build with pekko 2 (#407)
* build with pekko 2

* Update build.sbt

* compile issues

* Update EventProcessorStream.scala

* Update EventProcessorStream.scala

* Update CassandraSnapshotStore.scala

* Update build.sbt

* update docs